--- a/src/summary.html
+++ b/src/summary.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
+
 <body>
-    <h1>TEST TEST</h1>
+  <h1>Test</h1>
+  <h2>abc</h2>
 </body>
+<script src="./summaryPage.bundle.js"></script>
+
 </html>
