Added some styles to flight summary panel

--- a/src/index.html
+++ b/src/index.html
@@ -133,13 +133,29 @@
 
     <section class="summary">
         <div class="summary__informations">
-            <div class="summary__informations__panel">
-                <div class="summary__informations__panel__departure-city"><i class="fa-sharp fa-solid fa-plane-departure"></i></div>
-                <div class="summary__informations__panel__arrival-city"><i class="fa-solid fa-plane-arrival"></i></div>
-                <div class="summary__informations__panel__departure-date">Departure <i class="fa-solid fa-calendar-days"></i></div>
-                <div class="summary__informations__panel__return-date">Return <i class="fa-solid fa-calendar-days"></i></div>
-                <div class="summary__informations__panel__passengers"><i class="fa-solid fa-person-walking-luggage"></i></div>
-                <div class="summary__informations__panel__luggage"><i class="fa-solid fa-suitcase"></i></div>
+            <h2 class="summary__informations__header">Summary</h2>
+            <div class="summary__informations__panel-first">
+                <div class="summary__informations__panel-first__departure-city"><i
+                        class="fa-sharp fa-solid fa-plane-departure"></i> Los Angeles</div>
+                <div class="summary__informations__panel-first__arrival-city"> <i
+                        class="fa-sharp fa-solid fa-plane-departure"></i>Los Angeles</i>
+                </div>
+                <div class="summary__informations__panel-first__departure-date">
+                    <div><i class="fa-solid fa-calendar-days"></i> <i class="fa-solid fa-arrow-right"></i></div>
+                    9999-99-99
+                </div>
+            </div>
+            <div class="summary__informations__panel-second">
+                <div class="summary__informations__panel-second__return-date">
+                    <div><i class="fa-solid fa-calendar-days"></i> <i class="fa-solid fa-arrow-right"></i></div>
+                    9999-99-99
+                </div>
+                <div class="summary__informations__panel-second__passengers">
+                    <div><i class="fa-solid fa-person-walking-luggage"></i> Los Angeles</div>
+                    <div> <i class="fa-solid fa-person-walking-luggage"></i> Los Angeles</div>
+                </div>
+                <div class="summary__informations__panel-second__luggage"><i
+                        class="fa-sharp fa-solid fa-plane-departure"></i> Los Angeles</div>
             </div>
         </div>
         <div class="summary__flights">cośtam </div>
