First steps od displaying current weather in arrival city

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,8 @@
             <p class="navigation__date-hour__date--margin"></p>
             <p class="navigation__date-hour__time--padding"></p>
         </div>
+        <div class="navigation__arrival-weather">
+        </div>
         <div class="navigation__login">
             <button class="navigation__login__login-button--colors" type="button" id="login-button">
                 <p class="navigation__login__login-button__log-in">Log in</p>
