Successfully connected to flight API

--- a/src/index.html
+++ b/src/index.html
@@ -98,7 +98,7 @@
                 </div>
                 <div class="container__panel__travel-date__return-date bottom-div">
                     <label for="returnDate"></label>
-                    <p class="container__panel__travel-date__return-date__p paragraph-style">Arrival date</p>
+                    <p class="container__panel__travel-date__return-date__p paragraph-style">Return Date</p>
                     <input type="date" name="returnDate" id="returnDate" class="inputSelect">
                 </div>
 
