Taken first steps of displaying fetched data on website and added RWD to summary page

--- a/src/index.html
+++ b/src/index.html
@@ -126,11 +126,6 @@
         <p class="container__error">
         </p>
 
-        <div class="container__plane"></div>
-
-
-
-
     </main>
 
     <section class="summary">
@@ -153,14 +148,15 @@
                     9999-99-99
                 </div>
                 <div class="summary__informations__panel-second__passengers">
-                    <div><i class="fa-solid fa-person-walking-luggage"></i> Los Angeles</div>
-                    <div> <i class="fa-solid fa-person-walking-luggage"></i> Los Angeles</div>
+                    <div><i class="fa-solid fa-person-walking-luggage"></i> 20</div>
+                    <div> <i class="fa-solid fa-person-walking-luggage"></i> 10</div>
                 </div>
                 <div class="summary__informations__panel-second__luggage"><i
                         class="fa-sharp fa-solid fa-plane-departure"></i> Los Angeles</div>
             </div>
         </div>
-        <div class="summary__flights">cośtam </div>
+        <div class="summary__flights">
+        </div>
     </section>
 
     <footer class="footer">
