Changed some styles of summary page and printed fetched data form Api to  summary page

--- a/src/index.html
+++ b/src/index.html
@@ -156,6 +156,14 @@
             </div>
         </div>
         <div class="summary__flights">
+            <!-- <div class="summary__flights__flightInfo">
+                <p class="summary__flights__flightInfo__paragraph">Departure</p>
+                <p class="summary__flights__flightInfo__paragraph">Arrival </p>
+                <p class="summary__flights__flightInfo__paragraph">Duration</p>
+                <p class="summary__flights__flightInfo__paragraph">Price</p>
+
+
+            </div> -->
         </div>
     </section>
 
