Changed localization of  file to previous and fixed spelling error in header

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
 
     <header class="header">
         <div class="header__text">
-            <h1 class="header__text__headline--font">Welcome to Brochów Arilines!</h1>
+            <h1 class="header__text__headline--font">Welcome to Brochów Airlines!</h1>
             <p class="header__text__paragraph--style"> We'll take you all the way to San Escobar</p>
         </div>
     </header>
