Changes directory of index.html file after build

--- a/src/index.html
+++ b/src/index.html
@@ -162,8 +162,8 @@
     <footer class="footer">
         <p class="footer__rights">CopyRight by Brochów Airlines</p>
         <div class="footer-links">
-            <p class="footer-links__link"><a href="https://www.facebook.com/" target="_blank"
-                    rel="noopener noreferrer"><i class="fa-brands fa-facebook"></i>
+           <a href="https://www.facebook.com/" target="_blank"
+                    rel="noopener noreferrer"> <p class="footer-links__link"><i class="fa-brands fa-facebook"></i>
                     Facebook</p></a>
             <a href="https://twitter.com/i/flow/login" target="_blank" rel="noopener noreferrer">
                 <p class="footer-links__link"><i class="fa-brands fa-twitter"></i> Twitter</p>
